<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg2color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="349dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="11dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="11dp"
        android:text="@string/navtxt"
        android:textSize="25sp"
        android:textStyle="italic"
        android:textColor="@color/white"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/flashlight_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:background="@drawable/main_btn"
        android:text="@string/turn_on"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        tools:ignore="VisualLintButtonSize,TextSizeCheck" />

    <Button
        android:id="@+id/button_5min"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashlight_button"
        android:layout_alignParentStart="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/btn"
        android:text="@string/_5_min"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_10min"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashlight_button"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/button_15min"
        android:layout_toEndOf="@+id/button_5min"
        android:background="@drawable/btn"
        android:text="@string/_10_min"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/button_15min"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/flashlight_button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/btn"
        android:text="@string/_15_min" />

    <EditText
        android:id="@+id/custom_time_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_15min"
        android:layout_alignParentStart="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:hint="@string/custom_time_min"
        android:inputType="number"
        android:minHeight="48dp"
        style="@style/CustomEditTextStyle"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/set_custom_time_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_15min"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="50dp"
        android:layout_toEndOf="@+id/custom_time_input"
        android:background="@drawable/button_background"
        android:text="@string/set_time"
        android:textColor="@color/black"
        tools:ignore="VisualLintButtonSize" />

    <ToggleButton
        android:id="@+id/blink_toggle"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="520dp"
        android:layout_marginBottom="304dp"
        android:background="#00BCD4"
        android:textColor="#283593"
        android:textOff="@string/blink_on"
        android:textOn="@string/blink_off" />

    <Button
        android:id="@+id/btnEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/feedback_btn"
        android:layout_marginStart="30dp"
        android:text="@string/send_mail" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:text="@string/footertxt"
        android:textAlignment="center"
        android:textColor="#B0BEC5"
        android:textSize="15sp"
        tools:ignore="VisualLintBounds" />

</RelativeLayout>
